# python-sage-imap

./: .codespellrc  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  Makefile  README.md  SECURITY.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-integration.yml  ci.yml  publish.yml  python-publish.yml  release.yml
docker/mailcow/: README.md  docker-compose.yml  dovecot-users
docs/: AIOIMAP_SPIKE.md  ASYNC.md  MIGRATION_v2.md  Makefile  SESSION.md  make.bat
docs/source/: changelog.rst  conf.py  contributing.rst  faq.rst  index.rst  troubleshooting.rst
docs/source/_static/: custom.css
docs/source/code/: client.rst  enums.rst  exceptions.rst  flags.rst  folder.rst  mailbox.rst  message.rst  models.rst  modules.rst  search.rst
docs/source/getting_started/: async_api.rst  best_practices.rst  common_patterns.rst  configuration.rst  features.rst  first_steps.rst  headers.rst  imap_session.rst  index.rst  installation.rst  introduction.rst  message_set.rst  migration_v2.rst  search.rst  terminologies.rst  what_is_imap.rst
docs/source/getting_started/examples/: basic_usage.rst  client_advanced.rst  error_handling.rst  example1.rst  example2.rst  example3.rst  flag_operations.rst  folder_management.rst  index.rst  large_volume_handling.rst  mailbox_management.rst  message_set_usage.rst  monitoring_analytics.rst  outlook_integration.rst  production_patterns.rst  smtp_integration.rst  uid_search_operations.rst
docs/source/orm/: index.rst
docs/source/tutorials/: index.rst
docs/source/tutorials/async/: 01_welcome.rst  02_setup_and_connect.rst  03_explore_mailbox.rst  04_search_and_uids.rst  05_read_messages.rst  06_flags_and_actions.rst  07_folders_and_special_use.rst  08_auth_providers.rst  09_sync_and_idle.rst  10_production.rst  index.rst
docs/source/tutorials/orm/: 01_welcome.rst  02_install_and_connect.rst  03_filters_and_querysets.rst  04_load_levels_and_schemas.rst  05_pagination_and_actions.rst  06_multi_tenant.rst  07_sync_and_idle.rst  08_async_orm.rst  index.rst
docs/source/tutorials/sync/: 01_welcome.rst  02_setup_and_connect.rst  03_explore_mailbox.rst  04_search_and_uids.rst  05_read_messages.rst  06_flags_and_actions.rst  07_folders_and_special_use.rst  08_auth_providers.rst  09_sync_and_idle.rst  10_production.rst  index.rst
examples/: 01_basic_client_usage.py  02_connection_pooling_example.py  03_retry_and_resilience_example.py  04_monitoring_and_metrics_example.py  05_advanced_client_features.py  06_mailbox_operations_example.py  07_advanced_mailbox_features.py  08_mailbox_uid_operations.py  09_async_session.py  10_orm_sync.py  11_orm_async.py  README.md  README_mailbox.md  _env.py  enhanced_email_processing.py
requirements/: dev.txt  requirements.txt
sage_imap/: __init__.py  decorators.py  exceptions.py  session.py  utils.py
sage_imap/aio/: __init__.py  _response.py  client.py  flag.py  folder.py  idle.py  session.py  transport.py
sage_imap/aio/mailbox/: __init__.py  base.py  operations.py
sage_imap/aio/sync/: __init__.py  service.py
sage_imap/auth/: __init__.py  oauth2.py  oauth2_async.py
sage_imap/helpers/: email.py  enums.py  flags.py  folder_list.py  mailbox.py  message.py  parse_mode.py  search.py  special_use.py  typings.py
sage_imap/models/: email.py  fetch_parser.py  folder.py  message.py
sage_imap/orm/: __init__.py  async_session.py  config.py  exceptions.py  idle.py  managers.py  q.py  queryset.py  session.py
sage_imap/orm/backends/: __init__.py  async_.py  protocol.py  sync.py
sage_imap/orm/connections/: registry.py
sage_imap/orm/dialects/: base.py
sage_imap/orm/models/: __init__.py  checkpoint.py  folder.py  message.py
sage_imap/orm/schemas/: __init__.py  error.py  message.py
sage_imap/protocols/: __init__.py  imap_transport.py
sage_imap/services/: __init__.py  client.py  email.py  flag.py  folder.py  idle.py  mailbox.py  transport.py  transport_ops.py
sage_imap/services/mailbox/: __init__.py  _ops.py  base.py  models.py  operations.py
sage_imap/sync/: __init__.py  condstore.py  ops.py  service.py  state.py
scripts/: wait-for-imap.sh
stubs/sage_imap/: decorators.pyi  exceptions.pyi  utils.pyi
stubs/sage_imap/helpers/: email.pyi  enums.pyi  flags.pyi  mailbox.pyi  message.pyi  search.pyi  typings.pyi
stubs/sage_imap/models/: email.pyi  message.pyi
stubs/sage_imap/services/: __init__.pyi  client.pyi  email.pyi  flag.pyi  folder.pyi  mailbox.pyi
tests/: conf_test.py  conftest.py  test_decorators.py  test_exceptions.py  test_session_oauth_namespace.py  test_sync_idle_streaming.py  test_utils.py
tests/aio/: conftest.py  test_aio_package.py  test_client.py  test_flag.py  test_folder.py  test_idle.py  test_mailbox_base.py  test_mailbox_operations.py  test_oauth2_async.py  test_parity.py  test_response.py  test_session.py  test_sync_service.py  test_transport.py
tests/auth/: test_oauth2.py  test_oauth2_async.py
tests/coverage/: test_final_gaps.py  test_full_coverage.py  test_gaps.py  test_recent_features.py  test_remaining_100.py
tests/helpers/: test_email.py  test_flags.py  test_mailbox.py  test_message.py  test_search.py
tests/integration/: conftest.py  test_imap_lifecycle.py
tests/models/: __init__.py  conftest.py  test_email.py  test_email_enhanced.py  test_message.py
tests/orm/: conftest.py  test_orm_async.py  test_orm_backends.py  test_orm_core.py  test_orm_models.py  test_orm_package.py  test_orm_q.py  test_orm_queryset.py  test_orm_registry.py  test_orm_session.py
tests/services/: test_client.py  test_email.py  test_flag.py  test_flag_extended.py  test_folder.py  test_folder_extended.py  test_mailbox_base.py  test_mailbox_models.py  test_mailbox_operations.py  test_mailbox_operations_extended.py  test_mailbox_uid_operations.py  test_operations_coverage.py  test_transport.py  test_transport_ops.py
tests/sync/: test_ops.py
