[tool.poetry]
name = "python-sage-imap"
version = "2.1.0b1"
description = "Production-ready Python IMAP client with transport layer, mailbox services, OAuth2, and connection pooling."
authors = ["Sepehr Akbarzadeh <sepehr@sageteam.org>"]
maintainers = ["Sepehr Akbarzadeh <sepehr@sageteam.org>"]
readme = "README.md"
license = "MIT"
keywords = [
    "imap",
    "email",
    "mailbox",
    "mail",
    "oauth2",
    "python",
    "sage-imap",
]
repository = "https://github.com/sageteamorg/python-sage-imap"
homepage = "https://github.com/sageteamorg/python-sage-imap"
documentation = "https://python-sage-imap.readthedocs.io/en/latest/"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email :: Post-Office",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

packages = [
    { include = "sage_imap" }
]

[tool.poetry.urls]
"Documentation" = "https://python-sage-imap.readthedocs.io/en/latest/"
"Source Code" = "https://github.com/sageteamorg/python-sage-imap"
"Issues" = "https://github.com/sageteamorg/python-sage-imap/issues"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
aioimaplib = { version = "^1.0", optional = true }
httpx = { version = "^0.27", optional = true }
pydantic = { version = "^2.0", optional = true }

[tool.poetry.extras]
async = ["aioimaplib", "httpx"]
orm = ["pydantic"]

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.24"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.1"
pytest = "^8.2.2"
tox = "^4.15.1"
coverage = "^7.5.4"
pre-commit = "^3.7.1"
pylint = "^3.2.5"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pytest-timeout = "^2.3.1"
pydantic = "^2.0"
commitizen = "^3.27.0"
docformatter = "^1.7.5"
codecov = "^2.1.13"
sphinx-rtd-theme = "^2.0.0"
ruff = "^0.7.1"
bandit = {extras = ["toml"], version = "^1.7.10"}

[tool.pytest.ini_options]
# Basic pytest configuration
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Test discovery and execution
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "-m", "not integration",
    "--durations=10"
]

# Markers
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "asyncio: Async tests (pytest-asyncio)",
    "slow: Slow running tests",
    "email: Email-related tests",
    "message_set: MessageSet-related tests",
    "attachment: Attachment-related tests"
]

asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Test filtering
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

# Logging (disabled during tests to avoid noisy live-log warnings)
log_cli = false
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Directories to ignore
norecursedirs = [
    "node_modules",
    "env",
    "venv",
    ".venv",
    "dist",
    "build",
]

[tool.bandit]
targets = ["./sage_imap"]
exclude_dirs = [
    "tests",
    "examples",
    "migrations",
]
severity = "medium"
confidence = "medium"
max_lines = 500
progress = true
reports = true
output_format = "screen"
output_file = "bandit_report.txt"
include = ["B101", "B102"]
exclude_tests = ["B301", "B302"]

[tool.bandit.plugins]
B104 = { check_typed_list = true }

[tool.mypy]
ignore_missing_imports = true
ignore_errors = false
check_untyped_defs = false
disallow_untyped_calls = false
disallow_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false
# Allow `param: str = None` until annotations are fully strict (mypy 1.x default).
no_implicit_optional = false
# Pragmatic baseline for v1.0; tighten per-module in follow-up releases.
disable_error_code = [
    "return-value",
    "arg-type",
    "assignment",
    "attr-defined",
    "valid-type",
    "misc",
    "var-annotated",
    "union-attr",
    "truthy-function",
    "func-returns-value",
    "str-bytes-safe",
]
exclude = '''
^docs/|
^build/|
^tests/|
^kernel/|
^examples/
'''

[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | migrations
  | venv
  | env
  | __pycache__
  | static
  | media
  | node_modules
  | env
  | kernel
  | \.mypy_cache
  | \.pytest_cache
  | .*\.egg-info
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = [
    "venv",
    ".venv",
    "build",
    "dist",
    ".git",
    "__pycache__",
    "*.egg-info",
    ".mypy_cache",
    ".pytest_cache",
    "migrations",
    "static",
    "media",
    "node_modules",
    "env",
    "kernel"
]

[tool.coverage.run]
branch = false
source = ["sage_imap"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
    "kernel/*",
    "*/apps.py",
    "manage.py",
]

[tool.coverage.report]
# 100% line coverage (0 missing statements). Combined line+branch total is ~99%.
fail_under = 99
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstract",
    "if self\\.debug",
    "if 0:",
]

[tool.coverage.html]
directory = "htmlcov"
title = "Python Sage IMAP Coverage Report"

[tool.commitizen]
name = "cz_conventional_commits"
version = "2.1.0b1"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "sage_imap/__init__.py:__version__",
]

[tool.commitizen.settings]
increment_types = ["feat", "fix"]
changelog_file = "CHANGELOG.md"
update_changelog_on_bump = true

[tool.pylint]
disable = [
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function or method docstring
    "E1101",  # Instance of 'Foo' has no 'bar' member
    "W0212",  # Access to a protected member _foo of a client class
    "C0103",  # Invalid name (for short variable names like 'e', 'f', 'i')
    "R0902",  # Too many instance attributes
    "R0904",  # Too many public methods
    "R0911",  # Too many return statements
    "C0302",  # Too many lines in module
    "W1203",  # Use lazy % formatting in logging functions
    "W0718",  # Catching too general exception Exception
    "C0301",  # Line too long (handled by black)
    "C0415",  # Import outside toplevel
    "W0707",  # Consider explicitly re-raising
    "R1705",  # Unnecessary else after return
    "W0621",  # Redefining name from outer scope
    "R0913",  # Too many arguments
    "R0917",  # Too many positional arguments
    "R0912",  # Too many branches
    "R0915",  # Too many statements
    "R0914",  # Too many local variables
    "R1702",  # Too many nested blocks
    "R1720",  # Unnecessary else after raise
    "C0117",  # Unnecessary negation
    "W0612",  # Unused variable
    "R1704",  # Redefining argument with local name
    "W9006",  # Missing raises doc
    "R0801",  # Similar lines (duplicate code)
    "R0903",  # Too few public methods (data holders, pool wrappers)
]
max-line-length = 88
ignore = [
    "migrations/*",
    "venv/*",
    "build/*",
    "dist/*",
    ".git/*",
    "__pycache__/*",
    "*.egg-info/*",
    ".mypy_cache/*",
    ".pytest_cache/*",
    "examples/*"
]
load-plugins = [
    "pylint.extensions.docparams",
]
good-names = [
    "qs",  # QuerySet abbreviation
    "pk",  # Primary key abbreviation
    "id",  # Identifier
    "e",   # Exception variable
    "f",   # File variable
    "i",   # Index variable
    "j",   # Index variable
    "k",   # Index variable
    "v",   # Value variable
]
suggestion-mode = true
const-rgx = "([A-Z_][A-Z0-9_]*)|(__.*__)"
attr-rgx = "[a-z_][a-z0-9_]{2,30}$"
variable-rgx = "[a-z_][a-z0-9_]{2,30}$"
argument-rgx = "[a-z_][a-z0-9_]{2,30}$"
method-rgx = "[a-z_][a-z0-9_]{2,30}$"
function-rgx = "[a-z_][a-z0-9_]{2,30}$"
class-rgx = "[A-Z_][a-zA-Z0-9]+$"
module-rgx = "(([a-z_][a-z0-9_]*)|(__.*__))$"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
